Correction of file modification logic